moved blog link

--- a/tumblr/new.html
+++ b/tumblr/new.html
@@ -80,9 +80,9 @@
                 <div class="span8">
                     <ul class="nav nav-pills">
                         <li><a href="http://studentrnd.org/">Home</a></li>
-                        <li class="active"><a href="http://blog.studentrnd.org/">Blag</a></li>
                         <li><a href="http://studentrnd.org/about/">About</a></li>
                         <li><a href="http://studentrnd.org/getinvolved/">Get Involved</a></li>
+                        <li class="active"><a href="http://blog.studentrnd.org/">Blog</a></li>
                         <li><a href="http://studentrnd.org/contact/">Contact Us</a></li>
                         <li><a href="http://studentrnd.org/donate/">Donate</a></li>
                     </ul>
