--- a/tumblr/new.html
+++ b/tumblr/new.html
@@ -32,8 +32,11 @@
     /* StudentRND theme by Michael Tang */
 
     .post .post-content * {
-        font-size: 1.05em;
-        line-height: 1.6em;
+        line-height: 1.7em;
+    }
+    .post .post-content p {
+        font-size:1.05em;
+        line-height: 2em;
     }
     .post .post-content h1 {
         font-size: 2em;
@@ -67,12 +70,8 @@
         font-size:24px;
         color:#C5C5C5;
     }
-
-    .post.box {
-        margin-bottom:0;
-    }
     .post-footer {
-        margin:5px 15px 20px;
+        margin:-15px 15px 20px;
     }
 
 
